tests/rosetta/out/C/bitmap-read-an-image-through-a-pipe.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:54Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:54Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static char *ppmData = "P3\n2 2\n1\n0 1 1 0 1 0 0 1 1 1 0 0\n";

typedef struct {
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *magic;
  int w;
  int h;
  int max;
  list_int px;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int parseIntStr(char *str) {
  int i = 0;
  int neg = 0;
  char *tmp1 = slice_string(str, 0, 1);
  if ((str.len > 0 && tmp1 == "-")) {
    neg = 1;
    i = 1;
  }
  int n = 0;
  map_string_int digits = (tmp_item_t){._ = 0,
                                       ._ = 1,
                                       ._ = 2,
                                       ._ = 3,
                                       ._ = 4,
                                       ._ = 5,
                                       ._ = 6,
                                       ._ = 7,
                                       ._ = 8,
                                       ._ = 9};
  while ((i < str.len)) {
    char *tmp2 = slice_string(str, i, i + 1);
    n = n * 10 + map_string_int_get(digits, tmp2);
    i = i + 1;
  }
  if (neg) {
    n = (-n);
  }
  return n;
}

int splitWs(char *s) {
  list_string tmp3 = {0, NULL};
  int parts = tmp3;
  const char *cur = "";
  int i = 0;
  while (i < strlen(s)) {
    const char *ch = slice_string(s, i, i + 1);
    if ((strcmp(ch, " ") == 0) || ch == "\n" || ch == "\t" || ch == "\r") {
      if (strlen(cur) > 0) {
        list_string tmp4 = list_string_create(1);
        tmp4.data[0] = cur;
        list_string tmp5 = concat_list_string(parts, tmp4);
        parts = tmp5;
        cur = "";
      }
    } else {
      char *tmp6 = concat_string(cur, ch);
      cur = tmp6;
    }
    i = i + 1;
  }
  if (strlen(cur) > 0) {
    list_string tmp7 = list_string_create(1);
    tmp7.data[0] = cur;
    list_string tmp8 = concat_list_string(parts, tmp7);
    parts = tmp8;
  }
  return parts;
}

int parsePpm(char *data) {
  int toks = splitWs(data);
  if (toks.len < 4) {
    return (tmp_item_t){.err = 1};
  }
  const char *magic = toks.data[0];
  int w = parseIntStr(toks.data[1]);
  int h = parseIntStr(toks.data[2]);
  int maxv = parseIntStr(toks.data[3]);
  list_int px = list_int_create(0);
  int i = 4;
  while (i < toks.len) {
    px = 0;
    i = i + 1;
  }
  return (tmp_item1_t){.magic = magic, .w = w, .h = h, .max = maxv, .px = px};
}

int main() {
  int img = parsePpm(ppmData);
  char *tmp9 = _str(img.w);
  char *tmp10 = concat_string("width=", tmp9);
  char *tmp11 = concat_string(tmp10, " height=");
  char *tmp12 = _str(img.h);
  char *tmp13 = concat_string(tmp11, tmp12);
  printf("%s\n", tmp13);
  return 0;
}
